--- a/api/task-project.json
+++ b/api/task-project.json
@@ -3,8 +3,8 @@
     "msg": "",
     "count": 3,
     "data": [
-        { "id":"001", "title": "项目-1" },
-        { "id":"002", "title": "项目-2" },
-        { "id":"003", "title": "项目-3" }
+        { "id":1, "title": "项目-1" },
+        { "id":2, "title": "项目-2" },
+        { "id":3, "title": "项目-3" }
     ]
 }
